charts/my-website/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  labels:
    app: website
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      run: website-runner
  template:
    metadata:
      labels:
        run: website-runner
    spec:
      containers:
        - name: website
          image: simbleau/website:v3
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            # Start readyness checks after 10s
            initialDelaySeconds: 10
            # 5 min to startup (30 * 10 = 300s)
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 1
            periodSeconds: 10
          resources:
            limits:
              memory: 512Mi
              cpu: 1
            requests:
              memory: 128Mi
              cpu: "0.2"
