charts/my-website/service.yml
apiVersion: v1
kind: Service
metadata:
  name: website-svc
spec:
  selector:
    name: website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
