charts/my-website/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
spec:
  rules:
    - host: imbleau.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-svc
                port:
                  number: 80
